fix footer alignment

--- a/css/main.css
+++ b/css/main.css
@@ -501,7 +501,7 @@ footer {
 }
 
 .footer-nav .nav-bar {
-  width: 95vw;
+  width: 98vw;
   color: var(--black);
 }
 
